# danganronpa-v3-tools

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
crates/drv3-binio/: Cargo.toml
crates/drv3-binio/src/: encoding.rs  error.rs  lib.rs  reader.rs  writer.rs
crates/drv3-cli/: Cargo.toml
crates/drv3-cli/src/: dto.rs  main.rs
crates/drv3-cli/tests/: cpk_round_trip.rs  spc_round_trip.rs
crates/drv3-compression/: Cargo.toml
crates/drv3-compression/src/: crilayla.rs  lib.rs  spc_lzss.rs
crates/drv3-cpk/: Cargo.toml
crates/drv3-cpk/src/: archive.rs  lib.rs  utf.rs
crates/drv3-cpk/tests/: real_data.rs  real_data_round_trip.rs
crates/drv3-dat/: Cargo.toml
crates/drv3-dat/src/: lib.rs
crates/drv3-dto/: Cargo.toml
crates/drv3-dto-patch/: Cargo.toml
crates/drv3-dto-patch/src/: lib.rs
crates/drv3-dto/src/: glyph.rs  lib.rs  patch.rs
crates/drv3-spc/: Cargo.toml
crates/drv3-spc/src/: lib.rs
crates/drv3-spft/: Cargo.toml
crates/drv3-spft/src/: lib.rs
crates/drv3-srd/: Cargo.toml
crates/drv3-srd/src/: lib.rs  texture.rs
crates/drv3-stx/: Cargo.toml
crates/drv3-stx/src/: lib.rs
crates/drv3-translate/: Cargo.toml
crates/drv3-translate-cli/: Cargo.toml
crates/drv3-translate-cli/src/: cmd_apply.rs  cmd_validate.rs  dto.rs  main.rs
crates/drv3-translate/src/: engine.rs  engine_font.rs  error.rs  lib.rs  model.rs  options.rs  report.rs
crates/drv3-translate/tests/: round_trip.rs
crates/drv3-wrd/: Cargo.toml
crates/drv3-wrd/src/: lib.rs
docs/: binary-formats.md  json-schemas.md
