[package]
name = "drv3-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "drv3-cli command-line tool for reading/writing Danganronpa V3 game data"

[dependencies]
drv3-binio = { workspace = true }
drv3-compression = { workspace = true }
drv3-cpk = { workspace = true }
drv3-dat = { workspace = true }
drv3-dto = { workspace = true }
drv3-spc = { workspace = true }
drv3-spft = { workspace = true }
drv3-srd = { workspace = true }
drv3-stx = { workspace = true }
drv3-wrd = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
memmap2 = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
indexmap = { workspace = true }

[lints]
# Inherits the workspace `unsafe_code = "deny"` setting. The single mmap call
# site in `main.rs::mmap_file` uses `#[expect(unsafe_code)]` to opt in locally.
workspace = true
