[package]
name = "drv3-cpk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CRIWARE CPK archive reader/writer (used by Danganronpa V3)"

[dependencies]
drv3-binio = { workspace = true }
drv3-compression = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
indexmap = { workspace = true }

[lints]
workspace = true
