[package]
name = "drv3-dat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Danganronpa V3 DAT typed-table reader/writer"

[dependencies]
drv3-binio = { workspace = true }

[lints]
workspace = true
