[package]
name = "drv3-dto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "serde DTOs and conversions for the Danganronpa V3 dump/build exchange JSON schema"

[dependencies]
drv3-cpk = { workspace = true }
drv3-dat = { workspace = true }
drv3-spc = { workspace = true }
drv3-spft = { workspace = true }
drv3-stx = { workspace = true }
drv3-wrd = { workspace = true }

anyhow = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
