[package]
name = "drv3-spc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Danganronpa V3 SPC archive reader/writer"

[dependencies]
drv3-binio = { workspace = true }
drv3-compression = { workspace = true }

thiserror = { workspace = true }

[lints]
workspace = true
