[package]
name = "drv3-stx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Danganronpa V3 STX string table reader/writer"

[dependencies]
drv3-binio = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
