[package]
name = "drv3-translate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Translation patch engine for Danganronpa V3 game data"

[dependencies]
drv3-binio = { workspace = true }
drv3-cpk = { workspace = true }
drv3-spc = { workspace = true }
drv3-stx = { workspace = true }
drv3-srd = { workspace = true }
drv3-spft = { workspace = true }

thiserror = { workspace = true }
indexmap = { workspace = true }
rayon = { workspace = true }

[lints]
workspace = true
